[gd_scene load_steps=22 format=3 uid="uid://cccha58c83snh"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_ipb4e"]
[ext_resource type="PackedScene" uid="uid://dumey73f7jkif" path="res://Components/Camera/camera.tscn" id="2_bwilt"]
[ext_resource type="Texture2D" uid="uid://cwjny65dpocsu" path="res://Assets/cubist_noise.png" id="2_kk2gq"]
[ext_resource type="PackedScene" uid="uid://21sv5o73o1qs" path="res://Components/Player/player.tscn" id="2_n575r"]
[ext_resource type="PackedScene" uid="uid://cd40mea0array" path="res://Components/Exit/exit.tscn" id="3_cqhwr"]
[ext_resource type="Texture2D" uid="uid://cdqtrpnwtuggg" path="res://Assets/tileset.png" id="3_d3426"]
[ext_resource type="Texture2D" uid="uid://btyqt4tcpbdus" path="res://Assets/krapnik91.png" id="3_jp4mt"]
[ext_resource type="Texture2D" uid="uid://b4gfvlph6x7dh" path="res://Assets/placeholder.png" id="4_52ytb"]
[ext_resource type="Texture2D" uid="uid://cuxykqcvvmhow" path="res://Assets/noise.png" id="8_2axof"]
[ext_resource type="PackedScene" uid="uid://cehc6qdopbihl" path="res://Components/Cthulhu/cthullu.tscn" id="9_1sdp7"]
[ext_resource type="PackedScene" uid="uid://dyo0lcqxcv0ns" path="res://Components/LevelUI/ui.tscn" id="10_6bjt1"]
[ext_resource type="PackedScene" uid="uid://c32dagsu5q5tk" path="res://Components/Spikes/spikes.tscn" id="14_3kmkg"]
[ext_resource type="Theme" uid="uid://2y38oas4fgvb" path="res://Assets/theme.tres" id="14_uryi4"]

[sub_resource type="Shader" id="Shader_oin6d"]
code = "shader_type canvas_item;
//render_mode unshaded; // optional

// Noise texture
uniform sampler2D noise_texture: repeat_enable, filter_nearest;
// Fog density
uniform float density: hint_range(0.0, 1.0) = 0.25;
// Fog speed
uniform vec2 speed = vec2(0.02, 0.01);


// Called for every pixel the material is visible on
void fragment() {
	// Make the fog slowly move
	vec2 uv = UV + speed * TIME;
	// Sample the noise texture
	float noise = texture(noise_texture, uv).r;
	// Convert the noise from the (0.0, 1.0) range to the (-1.0, 1.0) range
	// and clamp it between 0.0 and 1.0 again
	float fog = clamp(noise * 2.0 - 1.0, 0.0, 1.0);
	// Apply the fog effect
	COLOR.a *= fog * density;
}
"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_te64r"]
noise_type = 4
frequency = 0.0202
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2rwj3"]
seamless = true
seamless_blend_skirt = 0.253
bump_strength = 2.0
normalize = false
noise = SubResource("FastNoiseLite_te64r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gweqj"]
shader = SubResource("Shader_oin6d")
shader_parameter/density = 0.25
shader_parameter/speed = Vector2(0.02, 0.01)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_2rwj3")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_npobn"]
texture = ExtResource("3_d3426")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 0, 64, 64, -64, 64, -64, 0)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, -64, -64, 0, -64, -0.254539, 0, 64, 0, 64, 64, -64, 64)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 0, 0, 0, 0, 0, 64, -64, 64)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, 0, 0, 0, -64, 64, 64, 64)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, -64, 64, 64, 64, 64, -64)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, 0, 0, 64, 0, 64, 64, -64, 64, -64, -64, 0, -64)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, -64, 64, 64, 64, 64, -64)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 0, 0, 0, 64, -64, 64)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, 0, 0, 64, 0, 64, 64, -64, 64, -64, -64)

[sub_resource type="TileSet" id="TileSet_6m4cf"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 15
physics_layer_0/collision_mask = 15
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_npobn")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uprlg"]
blend_mode = 3

[sub_resource type="Environment" id="Environment_v1eaa"]
background_mode = 3
tonemap_mode = 3
glow_enabled = true
glow_intensity = 0.36
glow_strength = 0.88
glow_bloom = 0.28
glow_blend_mode = 0

[node name="Game" type="Node2D" node_paths=PackedStringArray("player", "cthulhu", "camera")]
script = ExtResource("1_ipb4e")
player = NodePath("Player")
cthulhu = NodePath("Cthullu")
camera = NodePath("Camera")
metadata/_edit_horizontal_guides_ = [1028.0]

[node name="Bg" type="TextureRect" parent="."]
modulate = Color(0.407843, 0.407843, 0.407843, 0.721569)
offset_left = -7385.0
offset_top = -3101.0
offset_right = 7777.0
offset_bottom = 4594.0
texture = ExtResource("2_kk2gq")
expand_mode = 2
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(0.133333, 0.133333, 0.133333, 0.305882)
offset_left = -3537.0
offset_top = -147.0
offset_right = 1835.0
offset_bottom = 848.0
texture = ExtResource("3_jp4mt")
stretch_mode = 1

[node name="Camera" parent="." instance=ExtResource("2_bwilt")]
position = Vector2(-507, 224)
zoom = Vector2(0.25, 0.25)

[node name="Cthullu" parent="." instance=ExtResource("9_1sdp7")]
visible = false
position = Vector2(-948, -122)

[node name="Fog" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_gweqj")
custom_minimum_size = Vector2(1000, 1000)
offset_left = -4933.0
offset_top = -2094.0
offset_right = 3217.0
offset_bottom = 1522.0
mouse_filter = 2
color = Color(1, 1, 1, 0.317647)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 1)
tile_set = SubResource("TileSet_6m4cf")
format = 2
layer_0/tile_data = PackedInt32Array(524274, 0, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 262144, 0, 524279, 262144, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 262144, 0, 524285, 262144, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 262144, 0, 458755, 262144, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 262144, 0, 458761, 262144, 0, 458762, 262144, 0, 458763, 262144, 0, 458764, 262144, 0, 458765, 262144, 0, 393229, 262144, 0, 327693, 262144, 0, 262157, 262144, 0, 524273, 262144, 0, 327660, 0, 1, 327661, 0, 1, 327662, 0, 1, 458731, 65536, 0, 458732, 65536, 0, 524272, 262144, 0, 524271, 0, 0, 524270, 0, 0, 524269, 0, 0, 524268, 0, 0, 524267, 0, 0, 458746, 65536, 0, 458748, 0, 0, 458749, 0, 0, 458751, 65536, 0, 393218, 0, 0, 393219, 0, 0, 393220, 131072, 1, 393221, 65536, 0, 393222, 65536, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 458745, 65536, 0, 196590, 0, 1, 196587, 0, 1, 196622, 262144, 1, 262158, 262144, 1, 327694, 262144, 1, 393230, 262144, 1, 458766, 262144, 1, 524302, 262144, 1, 589838, 262144, 1, 655374, 262144, 1, 720910, 262144, 1, 786446, 262144, 1, 851982, 262144, 1, 917518, 262144, 1, 983054, 262144, 1, 327689, 65536, 0, 327688, 65536, 1, 327690, 65536, 0, 589807, 262144, 0, 589808, 262144, 0, 589809, 262144, 0, 589810, 262144, 0, 589811, 262144, 0, 589812, 262144, 0, 589813, 262144, 0, 589814, 262144, 0, 589815, 262144, 0, 589816, 262144, 0, 589817, 262144, 0, 589818, 262144, 0, 1048590, 262144, 1, 1114126, 262144, 1, 1179662, 262144, 1, 1245198, 262144, 1, 458744, 131072, 1, 458743, 0, 0, 458742, 0, 0, 458741, 65536, 0, 458740, 65536, 0, 458739, 65536, 0, 458737, 0, 0, 458736, 0, 0, 196621, 0, 0, 458735, 65536, 0, 458733, 65536, 0, 458734, 65536, 0, 524266, 0, 0, 458730, 131072, 1, 393194, 262144, 0, 327658, 262144, 1, 327657, 262144, 0, 393193, 262144, 0, 458729, 262144, 0, 524265, 262144, 0, 589801, 262144, 0, 262121, 0, 0, 196586, 196608, 1, 262122, 262144, 1, 196585, 65536, 1, 393201, 65536, 0, 393202, 196608, 0, 393206, 65536, 1, 393208, 196608, 0, 393207, 65536, 0, 131086, 196608, 1, 131085, 65536, 1, 327691, 65536, 0, 327692, 65536, 0, 458747, 65536, 0, 393217, 65536, 0, 393216, 65536, 0, 393223, 65536, 0, 458738, 131072, 1, 393200, 65536, 1, 393212, 65536, 1, 327682, 65536, 1, 393213, 65536, 0, 327683, 65536, 0, 458750, 131072, 1, 327684, 196608, 0, 393214, 196608, 0)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.113725, 0.113725, 0.113725, 1)
offset_left = -2940.0
offset_top = 1025.0
offset_right = 1920.0
offset_bottom = 2648.0
mouse_filter = 2
texture = ExtResource("4_52ytb")

[node name="Noise" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_uprlg")
offset_left = -4925.0
offset_top = -2226.0
offset_right = 3527.0
offset_bottom = 2214.0
mouse_filter = 2
texture = ExtResource("8_2axof")
expand_mode = 2
stretch_mode = 1
flip_h = true

[node name="Exit" parent="." instance=ExtResource("3_cqhwr")]
position = Vector2(1394, 710)

[node name="Player" parent="." node_paths=PackedStringArray("game", "camera") instance=ExtResource("2_n575r")]
position = Vector2(-2448, 755)
scale = Vector2(0.3, 0.3)
lives = 1
abilities = {
"attack": false,
"doublejump": false,
"fly": false,
"jump": true
}
game = NodePath("..")
camera = NodePath("../Camera")
SPEED = 60000

[node name="UI" parent="." instance=ExtResource("10_6bjt1")]
visible = false
show_timer = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v1eaa")

[node name="Spikes" parent="." instance=ExtResource("14_3kmkg")]
position = Vector2(-1489, 809)

[node name="Spikes2" parent="." instance=ExtResource("14_3kmkg")]
position = Vector2(-732, 818)

[node name="Spikes3" parent="." instance=ExtResource("14_3kmkg")]
position = Vector2(29, 820)

[node name="Spikes4" parent="." instance=ExtResource("14_3kmkg")]
position = Vector2(792, 813)

[node name="TutorialControls" type="Label" parent="."]
offset_left = -2599.0
offset_top = 1002.0
offset_right = -2121.0
offset_bottom = 1066.0
theme = ExtResource("14_uryi4")
theme_override_font_sizes/font_size = 55
text = "ARROWS / WASD"

[node name="TutorialExit" type="Label" parent="."]
offset_left = 1081.0
offset_top = 842.0
offset_right = 1676.0
offset_bottom = 906.0
theme = ExtResource("14_uryi4")
theme_override_font_sizes/font_size = 55
text = "tO tHE NEXT REALM"

[connection signal="deal" from="Cthullu" to="." method="_on_cthullu_deal"]
[connection signal="on_gone" from="Cthullu" to="." method="_on_cthullu_on_gone"]
[connection signal="on_summon" from="Cthullu" to="." method="_on_cthullu_on_summon"]
[connection signal="exit_reached" from="Exit" to="." method="_on_exit_exit_reached"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="on_hit" from="Player" to="." method="_on_player_on_hit"]
